# gh-contrib-demo

./: README.md  pyproject.toml
src/gh_contrib_demo/core/: client.py
src/gh_contrib_demo/core/adapters/: repository.py
src/gh_contrib_demo/core/entities/: repository.py
tests/core/adapters/: test_repository.py
